@@ -53,8 +53,9 @@ function search_api_menu() {
   );
   $items[$pre . '/server/%search_api_server/view'] = array(
     'title' => 'View',
-    'weight' => -10,
     'type' => MENU_DEFAULT_LOCAL_TASK,
+    'context' => MENU_CONTEXT_INLINE | MENU_CONTEXT_PAGE,
+    'weight' => -10,
   );
   $items[$pre . '/server/%search_api_server/edit'] = array(
     'title' => 'Edit',
@@ -67,6 +68,18 @@ function search_api_menu() {
     'type' => MENU_LOCAL_TASK,
     'context' => MENU_CONTEXT_INLINE | MENU_CONTEXT_PAGE,
   );
+  $items[$pre . '/server/%search_api_server/disable'] = array(
+    'title' => 'Disable',
+    'description' => 'Disable index.',
+    'page callback' => 'search_api_admin_server_view',
+    'page arguments' => array(5, 6),
+    'access callback' => 'search_api_access_disable_page',
+    'access arguments' => array(5),
+    'file' => 'search_api.admin.inc',
+    'type' => MENU_LOCAL_TASK,
+    'context' => MENU_CONTEXT_INLINE,
+    'weight' => 8,
+  );
   $items[$pre . '/server/%search_api_server/delete'] = array(
     'title' => 'Delete',
     'title callback' => 'search_api_title_delete_page',
@@ -77,7 +90,9 @@ function search_api_menu() {
     'access callback' => 'search_api_access_delete_page',
     'access arguments' => array(5),
     'file' => 'search_api.admin.inc',
-    'type' => MENU_CALLBACK,
+    'type' => MENU_LOCAL_TASK,
+    'context' => MENU_CONTEXT_INLINE,
+    'weight' => 10,
   );
   $items[$pre . '/index/%search_api_index'] = array(
     'title' => 'View index',
@@ -102,9 +117,9 @@ function search_api_menu() {
     'page arguments' => array('search_api_admin_index_edit', 5),
     'access arguments' => array('administer search_api'),
     'file' => 'search_api.admin.inc',
-    'weight' => -6,
     'type' => MENU_LOCAL_TASK,
     'context' => MENU_CONTEXT_INLINE | MENU_CONTEXT_PAGE,
+    'weight' => -6,
   );
   $items[$pre . '/index/%search_api_index/fields'] = array(
     'title' => 'Fields',
@@ -113,9 +128,9 @@ function search_api_menu() {
     'page arguments' => array('search_api_admin_index_fields', 5),
     'access arguments' => array('administer search_api'),
     'file' => 'search_api.admin.inc',
-    'weight' => -4,
     'type' => MENU_LOCAL_TASK,
     'context' => MENU_CONTEXT_INLINE | MENU_CONTEXT_PAGE,
+    'weight' => -4,
   );
   $items[$pre . '/index/%search_api_index/workflow'] = array(
     'title' => 'Workflow',
@@ -124,9 +139,21 @@ function search_api_menu() {
     'page arguments' => array('search_api_admin_index_workflow', 5),
     'access arguments' => array('administer search_api'),
     'file' => 'search_api.admin.inc',
-    'weight' => -2,
     'type' => MENU_LOCAL_TASK,
     'context' => MENU_CONTEXT_INLINE | MENU_CONTEXT_PAGE,
+    'weight' => -2,
+  );
+  $items[$pre . '/index/%search_api_index/disable'] = array(
+    'title' => 'Disable',
+    'description' => 'Disable index.',
+    'page callback' => 'search_api_admin_index_view',
+    'page arguments' => array(5, 6),
+    'access callback' => 'search_api_access_disable_page',
+    'access arguments' => array(5),
+    'file' => 'search_api.admin.inc',
+    'type' => MENU_LOCAL_TASK,
+    'context' => MENU_CONTEXT_INLINE,
+    'weight' => 8,
   );
   $items[$pre . '/index/%search_api_index/delete'] = array(
     'title' => 'Delete',
@@ -138,7 +165,9 @@ function search_api_menu() {
     'access callback' => 'search_api_access_delete_page',
     'access arguments' => array(5),
     'file' => 'search_api.admin.inc',
-    'type' => MENU_CALLBACK,
+    'type' => MENU_LOCAL_TASK,
+    'context' => MENU_CONTEXT_INLINE,
+    'weight' => 10,
   );
 
   return $items;
@@ -194,6 +223,12 @@ function search_api_hook_info() {
  * Implements hook_theme().
  */
 function search_api_theme() {
+  $themes['search_api_dropbutton'] = array(
+    'variables' => array(
+      'links' => array(),
+    ),
+    'file' => 'search_api.admin.inc',
+  );
   $themes['search_api_server'] = array(
     'variables' => array(
       'id' => NULL,
@@ -2132,6 +2167,19 @@ function search_api_server_url(SearchApiServer $server) {
  */
 function search_api_title_delete_page(Entity $entity) {
   return $entity->hasStatus(ENTITY_OVERRIDDEN) ? t('Revert') : t('Delete');
+}
+
+/**
+ * Determines whether the current user can disable a server or index.
+ *
+ * @param Entity $entity
+ *   The server or index for which the access to the "disable" page is checked.
+ *
+ * @return bool
+ *   TRUE if the "disable" page can be accessed by the user, FALSE otherwise.
+ */
+function search_api_access_disable_page(Entity $entity) {
+  return user_access('administer search_api') && !empty($entity->enabled);
 }
 
 /**
